2002-01-23  Per Bothner  <per@bothner.com>

	* Lexer.java (interactive):  New field.
	(isInteractive, setInteractive):  New methods.

	* Lexer.java (eofError):  New method.

2001-12-24  Per Bothner  <per@bothner.com>

	* IntegerFormat.java:  Remove dependencies on gnu.math.
	Move them to new class gnu.kawa.functions.IntegerFormat.
	(base, minWidth, padChar, commaChar, commaInterval, flags): Now public.
	(plainDecimalFormat, getInstance):  Move to new class.
	(asInteger):  Remove method.
	(convertToIntegerString):  New method.

2001-11-12  Per Bothner  <per@bothner.com>

	* Lexer.java (unread):  Only unread if character is not eof.

2001-10-02  Per Bothner  <per@bothner.com>

	* PrettyWriter.java (isPrettyPrinting):  Set in constructors only.

2001-08-23  Per Bothner  <per@bothner.com>

	* PrettyWriter.java (setIndentation):  Fix handling of 'prefix' local
	cache for 'prefix' field.
	Fixes bug reported by Felix S Klock II <pnkfelix@MIT.EDU>.

2001-08-16  Per Bothner  <per@bothner.com>

	* SourceMessages.java (printAll):  Make public.

	* SourceMessages.java (clear): New method.
	* SyntaxException.java (clear): New method.

2001-07-17  Per Bothner  <per@bothner.com>

	* EnglishIntegerFormat.java:  For now disable FormatToConsumer support.

2001-07-06  Thomas Kirk  <tk@research.att.com>

	* PrettyWriter.java(ensureSpaceInBuffer): Don't call
	outputPartialLine when isPrettyPrinting is false (e.g. when
	printing to a CharArrayOutPort).	

2001-06-03  Per Bothner  <per@bothner.com>

	* PrettyWriter.java: New class, extends Writer.

	* WriterManager.java:  New class.
	* Makefile.am (java_sources):  Add new classes.

	* EnglishIntegerFormat.java:  Experimental FormatConsumer support.

2001-04-22  Per Bothner  <per@bothner.com>

	* Char.java (nameToChar):  Try looking for named char, ignoring case.
	If we see C-X (for any X), return the corresponding control character.

	* Lexer.java (getName, getLineNumber, getColumnNumber):  New methods.
